--- a/index.css
+++ b/index.css
@@ -1,19 +1,53 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html, body{
+    width: 100%;
+    height: 100%;
+}
+
+
+
+
+
 body{
     text-align: center;
     padding: 100px; 
     font-family: monospace;
-    /* background: linear-gradient(white, grey); */
-    background-color: snow;
+    /* background-color: snow; */
+    background: linear-gradient( rgba(255, 250, 250, 0.95), rgba(255, 250, 250, 0.95)), url(https://imgix.bustle.com/uploads/image/2020/8/4/178bc014-a0c3-47e7-8e33-72e6f26909c4-rock-paper-scissors.jpg?w=1200&h=630&fit=crop&crop=faces&fm=jpg);
+    background-size: cover;
+}
+
+#main{
+    display: flex;
+    position: relative;
 }
 
 
-.container{
+.container {
+    /* background-color: rgb(199, 195, 195); */
     margin: 40px auto;
-    width: 500px;
+    width: 600px;
     border: 2px solid grey; 
     border-radius: 8px;
-    padding: 50px;
+    padding: 90px;
+    transition: transform 0.8s, box-shadow 0.5s, border-color 0.5s;
+    overflow: hidden;
 }
+
+
+.container:hover {
+    transform: scale(1.02);
+    box-shadow: 5px 5px 20px grey;
+    border-color: red; /* Initial color, will be overridden by JavaScript */
+}
+
+
+
 
 
 .title {
@@ -29,16 +63,26 @@ body{
     border: 1px solid #afdcee;
     border-radius: 6px;
     width: 220px;
-    margin: 30px auto;
+    margin: 60px auto 20px auto;
+    padding: 10px 2px;
+}
+
+.player2, .player1{
+    margin: 10px auto;
 }
 
 
 .btn-1, .btn-2 {
-    border: 1px solid rgb(255, 123, 0);
+    /* border: 1px solid rgb(255, 123, 0); */
+    border: 1.5px solid #24a0ed;
     border-radius: 4px;
     font-family: monospace;
+    font-size: 12px;
+    font-weight: bold;
+    color: rgba(0, 0, 0, 0.7);
     margin: 5px;
-    padding: 5px 20px;
+    padding: 8px 20px;
+    cursor: pointer;
     transition: transform 0.2s, box-shadow 0.5s;
 }
 
@@ -53,11 +97,30 @@ body{
 }
 
 .winner {
-    font-size: 16px;
+    font-size: 17px;
     font-weight: bold;
+    /* transition: transform .3s; */
 }
 /* .check {
     margin: 5px;
     padding: 5px 20px;
 } */
 
+
+
+
+/* Reset button */
+.reset{
+    margin: 10px;
+    border: none;
+    transition: transform .3s;
+    cursor: pointer;
+}
+
+.reset:hover{
+    transform: scale(1.25);
+}
+
+.reset:active{
+    transform: scale(1);
+}
